# github-tests

./: CHANGELOG.md  pyproject.toml  requirements.dev.txt  requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/ISSUE_TEMPLATES/: bug.yml
.github/workflows/: build-multi.yml  build.yml  fail.yml  greetings.yml  publish.yml  release-please.yml  tests.yml
simple_package/: __init__.py
tests/: config.py  test_package.py
why_this/: __init__.py
