#   Copyright (c) 2022 Asif Arman Rahman
#   Licensed under MIT (https://github.com/AsifArmanRahman/firebase/blob/main/LICENSE)

# --------------------------------------------------------------------------------------


[build-system]
requires = ['flit_core >=3.2,<4']
build-backend = 'flit_core.buildapi'


[project]

# Define the library name, this is what is used along with `pip install`.
name = 'simple-package-AsifArmanRahman'

# Define the version of this library.
version = '2.0.0'


# I have a long description but that will just be my README
# file of `markdown` type
readme = 'README.md'

# Here I can specify the python version necessary to run this library.
requires-python = '>=3.6'

# Define the Author's name and email.
authors = [
	{ name = 'Asif Arman Rahman', email = 'AsifArmanRahman@gmail.com' },
]

# Here are the keywords of my library.
keywords = [
	'Simple',
]

# Additional classifiers that give some characteristics about the package.
# For a complete list go to https://pypi.org/classifiers/.
classifiers = [

	# Here I'll define the license that guides my library.
	'License :: OSI Approved :: MIT License',

	# Here I'll note that package was written in English.
	'Natural Language :: English',

	# Here I'll note that any operating system can use it.
	'Operating System :: OS Independent',

	# Here I'll specify the version of Python it uses.
	'Programming Language :: Python',
	'Programming Language :: Python :: 3',
	'Programming Language :: Python :: 3.6',
	'Programming Language :: Python :: 3.7',
	'Programming Language :: Python :: 3.8',
	'Programming Language :: Python :: 3.9',
	'Programming Language :: Python :: 3.10',

	# Here are the topics that my library covers.
	'Topic :: Software Development :: Libraries :: Python Modules',
]
dynamic = [
    # Here is a small description of the library. This appears
    # when someone searches for the library on https://pypi.org/search.
    'description',

]


[project.optional-dependencies]
test = [
	'pytest>=7.1.2',
	'pytest-cov>=3.0.0',
]


[project.urls]

# Here is the URL where you can find the code, in this case on GitHub.
Source = 'https://github.com/AsifArmanRahman/github-tests'


[tool.flit.module]
name = 'simple_package'
