[build-system]
requires = [ "flit_core >=3.2,<4" ]
build-backend = "flit_core.buildapi"

[project]
name = "simple-package-AsifArmanRahman"
version = "2.1.0"
readme = "README.md"
requires-python = ">=3.6"
keywords = [ "Simple" ]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dynamic = [ "description" ]

  [[project.authors]]
  name = "Asif Arman Rahman <asifarmanrahman@gmail.com>"

  [project.optional-dependencies]
  test = [ "pytest>=7.1.2", "pytest-cov>=3.0.0" ]

  [project.urls]
  Source = "https://github.com/AsifArmanRahman/github-tests"

[tool.flit.module]
name = "simple_package"
